--- a/public/contact.html
+++ b/public/contact.html
@@ -17,43 +17,46 @@
 
     </script>
     <style>
-    /* The Logo */
-    header {
-        text-align: center;
-        font-size: 50px;
-    }
+        /* The Logo */
+        header {
+            text-align: center;
+            margin-left: -300px;
+            font-size: 40px;
+            display: center;
+        }
 
-    /* The Main Nav */
-    #main-nav {
-        background-color: lightblue;
-        font-size: 25px;
-        text-align: center;
-    }
+        /* The Main Nav */
+        #main-nav {
+            background-color: lightblue;
+            font-size: 25px;
+            text-align: center;
+        }
 
-    /* Get's rid of the bullets */
-    #main-nav li {
-        display: inline;
-        position: relative;
-    }
+        /* Get's rid of the bullets */
+        #main-nav li {
+            display: inline;
+            position: relative;
+        }
 
-    #main-nav li:hover {
-        background-color: rgb(0, 255, 162);
-        color: rgb(17, 15, 15);
-    }
+        #main-nav li:hover {
+            background-color: rgb(0, 255, 162);
+            color: rgb(17, 15, 15);
+        }
 
-    #main-nav ul li {
-        display: inline-block;
-        text-align: center;
-        width: 10%;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        list-style-type: none;
-    }
+        #main-nav ul li {
+            display: inline-block;
+            text-align: center;
+            width: 10%;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            list-style-type: none;
+        }
 
-    body {
+        body {
             background-color: beige;
-    }
-</style>
+        }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
 </head>
 
 <body>
@@ -93,6 +96,13 @@
             </div>
         </div>
     </form>
+    <script>let animation = anime({
+            targets: "header",
+            translateX: 250,
+            direction: 'alternate',
+            loop: true,
+            easing: 'cubicBezier(.5, .5, .1, .3)',
+        });</script>
 </body>
 
 </html>
